Added department dump
also did some refactoring, input and output are no longer depending on the client or set inside the client. this drastically enhances testing capabilites.